--- a/chains/branch_runnable.ipynb
+++ b/chains/branch_runnable.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cf336aee",
    "metadata": {},
    "outputs": [
@@ -75,8 +75,8 @@
     "detail = promt1 | model | parsor\n",
     "\n",
     "branch_chain = RunnableBranch(\n",
-    "    (lambda x: len(x.split())>300, prompt2 | model | parsor),\n",
-    "    RunnablePassthrough()\n",
+    "    (lambda x: len(x.split())>300, prompt2 | model | parsor),   #case one \n",
+    "    RunnablePassthrough()  #default condition\n",
     ")\n",
     "\n",
     "final_chain = RunnableSequence(detail, branch_chain)\n",
