--- a/document_retriever/text_loader.ipynb
+++ b/document_retriever/text_loader.ipynb
@@ -2,6 +2,294 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fa387b38",
+   "metadata": {},
+   "source": [
+    "# LangChain Document Loaders Guide\n",
+    "\n",
+    "This folder demonstrates various document loading techniques in LangChain for ingesting different file types and sources.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Table of Contents\n",
+    "\n",
+    "1. [Text Loader](#1-text-loader)\n",
+    "2. [PDF Loader](#2-pdf-loader)\n",
+    "3. [Directory Loader](#3-directory-loader)\n",
+    "4. [Web Loader](#4-web-loader)\n",
+    "5. [Using Loaded Documents with LLM](#5-using-loaded-documents-with-llm)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Document Structure\n",
+    "\n",
+    "All loaders return `Document` objects with two main components:\n",
+    "\n",
+    "| Component | Description |\n",
+    "|-----------|-------------|\n",
+    "| `page_content` | The actual text content of the document |\n",
+    "| `metadata` | Dictionary containing source info, page numbers, etc. |\n",
+    "\n",
+    "```python\n",
+    "# Accessing document components\n",
+    "docs[0].page_content  # Get the text content\n",
+    "docs[0].metadata      # Get metadata (source, page, etc.)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. Text Loader\n",
+    "\n",
+    "Load plain text files (.txt) into LangChain documents.\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "```python\n",
+    "from langchain_community.document_loaders import TextLoader\n",
+    "\n",
+    "loader = TextLoader(\"doc.txt\", encoding=\"utf-8\")\n",
+    "docs = loader.load()\n",
+    "\n",
+    "# Access content\n",
+    "print(docs[0].page_content)\n",
+    "print(docs[0].metadata)  # {'source': 'doc.txt'}\n",
+    "```\n",
+    "\n",
+    "### Key Parameters\n",
+    "\n",
+    "| Parameter | Description |\n",
+    "|-----------|-------------|\n",
+    "| `file_path` | Path to the text file |\n",
+    "| `encoding` | Character encoding (e.g., `\"utf-8\"`) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. PDF Loader\n",
+    "\n",
+    "Load PDF documents with page-by-page extraction.\n",
+    "\n",
+    "### Installation\n",
+    "\n",
+    "```bash\n",
+    "pip install pypdf\n",
+    "```\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "```python\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "\n",
+    "loader = PyPDFLoader(\"johansson.pdf\")\n",
+    "docs = loader.load()\n",
+    "\n",
+    "# Each page becomes a separate document\n",
+    "print(len(docs))          # Number of pages\n",
+    "print(docs[0].metadata)   # {'source': 'johansson.pdf', 'page': 0}\n",
+    "print(docs[0].page_content)  # Content of first page\n",
+    "```\n",
+    "\n",
+    "### Key Features\n",
+    "\n",
+    "- Each page is loaded as a separate `Document`\n",
+    "- Metadata includes page number\n",
+    "- Preserves text formatting where possible\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Directory Loader\n",
+    "\n",
+    "Load multiple files from a directory with pattern matching.\n",
+    "\n",
+    "### Installation\n",
+    "\n",
+    "```bash\n",
+    "pip install unstructured\n",
+    "```\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "```python\n",
+    "from langchain_community.document_loaders import DirectoryLoader, PyPDFLoader\n",
+    "\n",
+    "loader = DirectoryLoader(\n",
+    "    path=\"pdfs\",\n",
+    "    glob=\"*.pdf\",\n",
+    "    loader_cls=PyPDFLoader\n",
+    ")\n",
+    "\n",
+    "# Load all at once\n",
+    "docs = loader.load()\n",
+    "print(len(docs))\n",
+    "print(docs[0].metadata)\n",
+    "```\n",
+    "\n",
+    "### Lazy Loading (Memory Efficient)\n",
+    "\n",
+    "```python\n",
+    "# For large directories - loads one document at a time\n",
+    "docs = loader.lazy_load()\n",
+    "\n",
+    "for document in docs:\n",
+    "    print(document.metadata)\n",
+    "    # Process document here\n",
+    "    # Document is removed from memory after processing\n",
+    "```\n",
+    "\n",
+    "### Key Parameters\n",
+    "\n",
+    "| Parameter | Description |\n",
+    "|-----------|-------------|\n",
+    "| `path` | Directory path |\n",
+    "| `glob` | File pattern (e.g., `\"*.pdf\"`, `\"**/*.txt\"`) |\n",
+    "| `loader_cls` | Loader class to use for files |\n",
+    "| `show_progress` | Show loading progress bar |\n",
+    "| `use_multithreading` | Load files in parallel |\n",
+    "\n",
+    "### Glob Patterns\n",
+    "\n",
+    "| Pattern | Matches |\n",
+    "|---------|---------|\n",
+    "| `*.pdf` | All PDFs in directory |\n",
+    "| `**/*.pdf` | All PDFs recursively |\n",
+    "| `*.txt` | All text files |\n",
+    "| `*` | All files |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Web Loader\n",
+    "\n",
+    "Load content directly from web pages.\n",
+    "\n",
+    "### Installation\n",
+    "\n",
+    "```bash\n",
+    "pip install beautifulsoup4\n",
+    "```\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "```python\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "\n",
+    "loader = WebBaseLoader(\"https://www.geeksforgeeks.org/deep-learning/deep-learning-tutorial/\")\n",
+    "docs = loader.load()\n",
+    "\n",
+    "print(len(docs[0].page_content))  # Length of extracted text\n",
+    "print(docs[0].metadata)           # {'source': 'url...', 'title': '...'}\n",
+    "```\n",
+    "\n",
+    "### Loading Multiple URLs\n",
+    "\n",
+    "```python\n",
+    "loader = WebBaseLoader([\n",
+    "    \"https://example.com/page1\",\n",
+    "    \"https://example.com/page2\",\n",
+    "    \"https://example.com/page3\"\n",
+    "])\n",
+    "docs = loader.load()\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. Using Loaded Documents with LLM\n",
+    "\n",
+    "Combine document loaders with LLMs for question answering.\n",
+    "\n",
+    "### Example: Web Content Q&A\n",
+    "\n",
+    "```python\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "from langchain_groq import ChatGroq\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Load web content\n",
+    "loader = WebBaseLoader(\"https://www.geeksforgeeks.org/deep-learning/deep-learning-tutorial/\")\n",
+    "text = loader.load()\n",
+    "\n",
+    "# Setup LLM chain\n",
+    "model = ChatGroq(model=\"llama3-8b-8192\")\n",
+    "prompt = PromptTemplate(\n",
+    "    template=\"Answer the following question {question} based on given text: {text}\",\n",
+    "    input_variables=[\"question\", \"text\"]\n",
+    ")\n",
+    "parser = StrOutputParser()\n",
+    "\n",
+    "# Create chain\n",
+    "chain = prompt | model | parser\n",
+    "\n",
+    "# Query\n",
+    "result = chain.invoke({\n",
+    "    'question': 'What is deep learning?',\n",
+    "    'text': text[0].page_content\n",
+    "})\n",
+    "print(result)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Comparison Summary\n",
+    "\n",
+    "| Loader | Use Case | Input | Output |\n",
+    "|--------|----------|-------|--------|\n",
+    "| **TextLoader** | Plain text files | `.txt` files | Single document |\n",
+    "| **PyPDFLoader** | PDF documents | `.pdf` files | Document per page |\n",
+    "| **DirectoryLoader** | Multiple files | Directory path | List of documents |\n",
+    "| **WebBaseLoader** | Web pages | URL(s) | Document per URL |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Other Available Loaders\n",
+    "\n",
+    "For more document loaders, refer to:\n",
+    "- [LangChain Documentation](https://python.langchain.com/docs/modules/data_connection/document_loaders/)\n",
+    "\n",
+    "### Popular Loaders\n",
+    "\n",
+    "| Loader | Use Case |\n",
+    "|--------|----------|\n",
+    "| `CSVLoader` | CSV files |\n",
+    "| `JSONLoader` | JSON files |\n",
+    "| `UnstructuredWordDocumentLoader` | Word documents |\n",
+    "| `UnstructuredMarkdownLoader` | Markdown files |\n",
+    "| `GitLoader` | Git repositories |\n",
+    "| `NotionDBLoader` | Notion databases |\n",
+    "| `S3FileLoader` | AWS S3 files |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Folder Structure\n",
+    "\n",
+    "```\n",
+    "document_retriever/\n",
+    "├── README.md\n",
+    "├── text_loader.ipynb    # Main notebook with examples\n",
+    "├── doc.txt              # Sample text file\n",
+    "└── pdfs/                # Directory with PDF files\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Requirements\n",
+    "\n",
+    "```bash\n",
+    "pip install langchain langchain-community langchain-groq pypdf beautifulsoup4 unstructured\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Environment Variables\n",
+    "\n",
+    "```bash\n",
+    "GROQ_API_KEY=your_groq_api_key\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "980838a9",
    "metadata": {},
    "source": [
