--- a/1.ipynb
+++ b/1.ipynb
@@ -10,7 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
+   "id": "29509e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "token = os.environ.get(\"OPENROUTER_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "495d6ddd",
    "metadata": {},
    "outputs": [
@@ -26,7 +37,7 @@
     "from openai import OpenAI\n",
     "client = OpenAI(\n",
     "  base_url=\"https://openrouter.ai/api/v1\",\n",
-    "  api_key=\"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\",\n",
+    "  api_key=token,\n",
     ")\n",
     "\n",
     "with open(\"text.txt\",'r') as f:\n",
